# pyProp

./: LICENSE  README.md  pyproject.toml  speciesParsing.ipynb  testing.ipynb
.github/workflows/: sphinx.yml
docs/: conf.py  index.rst  species.rst
docs/_autosummary/: pyProp.rst  src.pyProp.rst  src.rst
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/doctrees/_autosummary/: src.doctree
docs/_build/html/: genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_autosummary/: src.html
docs/_build/html/_sources/: index.rst.txt
docs/_build/html/_static/: documentation_options.js
docs/_elements/: compressor.rst  elements.rst
docs/_general_classes/: assembly.rst  element.rst  gas.rst  gen_class.rst  option.rst
docs/_general_classes/_ports/: flowstation.rst  port.rst  shaft_port.rst
src/data/: constants.py
src/pyProp/data/: species.py  thermo_copy.inp
src/pyProp/elements/: compressor.py
src/pyProp/structs/: assembly.py  compressor_map.py  element.py  gas.py
src/pyProp/structs/ports/: flowstation.py  port.py  shaftport.py
src/pyProp/utils/: ISA_atmos.py  newton.py
src/structs/: element.py  gas.py  option.py
src/structs/ports/: flowstation.py  port.py
src/utils/: compressible.py  general.py
test/data/: test_constant.py  test_species.py
test/utils/: test_ISA.py  test_compressible.py  test_general.py  test_newton.py
