[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyProp"

version = "0!1.0.0a1"

dependencies = [
    "networkx",
    "numpy",
    "pytest",
    "sphinx",
    "sphinx_rtd_theme",
]

requires-python = ">= 3.8"

authors = [
  {name = "Wyatt Giroux", email = "girouxw@mit.edu"},
]

description = "Python tool for on and off-design simulation of turbomachine engines."

readme = "README.md"

license = "MIT"